--- a/public/api.html
+++ b/public/api.html
@@ -88,17 +88,53 @@
                         <tr>
                             <td><code>/products/add</code></td>
                             <td>POST</td>
-                            <td><pre><code>
-                            {
-                                "name": 'name',
-                                "email": 'hotel@email.com'
-                            }</code></pre></td>
+                            <td><pre><code> Product Object </code></pre></td>
                           <td>
                             <pre><code>{
                               success: true,
                               product: {object}
                 </code></pre>}</td>
                         </tr>
+                    <tr>
+                        <td><code>/products/:id</code></td>
+                        <td>GET</td>
+                        <td><pre><code></code></pre></td>
+                        <td>
+                            <pre><code>{
+                              success: true,
+                              product: {object}
+                </code></pre>}</td>
+                      </tr>
+                      <tr>
+                        <td><code>/products/edit/:id</code></td>
+                        <td>PUT</td>
+                        <td><pre><code>Edited product object</code></pre></td>
+                        <td>
+                            <pre><code>{
+                              success: true,
+                              product: {object}
+                </code></pre>}</td>
+                      </tr>
+                      <tr>
+                        <td><code>/products/delete/:id</code></td>
+                        <td>DELETE</td>
+                        <td><pre><code>n/a</code></pre></td>
+                        <td>
+                            <pre><code>{
+                              success: true,
+                              product: {object}
+                </code></pre>}</td>
+                      </tr>
+                      <tr>
+                        <td><code>/products/activate/:id</code></td>
+                        <td>PUT</td>
+                        <td><pre><code>No object body, use it for activate and deactivate</code></pre></td>
+                        <td>
+                            <pre><code>{
+                              success: true,
+                              product: {object}
+                </code></pre>}</td>
+                      </tr>
                     </tbody>
                 </table>
             </div>
